--- a/gallery.html
+++ b/gallery.html
@@ -42,8 +42,8 @@
                 <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0 pe-3">
                     <li><a href="./index.html" class="nav-link px-2 link-light">Home</a></li>
                     <li><a href="./gallery.html" class="nav-link px-2 link-secondary">Galleries</a></li>
-                    <li><a href="./index.html" class="nav-link px-2 link-light">Artists</a></li>
-                    <li><a href="./index.html" class="nav-link px-2 link-light">Contact</a></li>
+                    <li><a href="./index.html#artists" class="nav-link px-2 link-light">Artists</a></li>
+                    <li><a href="./index.html#contact" class="nav-link px-2 link-light">Contact</a></li>
                     <li><a href="./FAQ.html" class="nav-link px-2 link-light">FAQs & Aftercare</a></li>
                 </ul>
             </header>
