--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
             <div class="title-addr d-flex justify-content-center">
             </div>
             <div class="title-btn d-flex justify-content-center">
-                <a href="#contact"><button class="btn btn-lg btn-primary m-2 rounded-2 ps-4 pe-4">Contact Us</button></a>
-                <a href="./gallery.html"> <button class="btn btn-lg btn-secondary m-2 rounded-2">View Galleries</button> </a>
+                <a href="#contact"><button class="btn btn-lg btn-primary m-2 rounded-2 ps-4 pe-4">Contact
+                        Us</button></a>
+                <a href="./gallery.html"> <button class="btn btn-lg btn-secondary m-2 rounded-2">View Galleries</button>
+                </a>
             </div>
             <br>
             <div class="containter">
@@ -66,17 +68,17 @@
                     <!--first artist-->
                     <div class="row d-flex mt-5">
                         <div class="col-12 col-md-6">
-                            <h3 class="text-light">Anne</h3>
+                            <h3 class="text-light text-center display-5 ">Anne</h3>
                             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img src="//placehold.it/800x400/88b48d" class="d-block h-50 img img-fluid">
+                                        <img src="./imgs/anne/anne1.jpg" class="d-block h-50 img mx-auto">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="//placehold.it/800x400/88b48d" class="d-block h-50 img img-fluid">
+                                        <img src="./imgs/anne/anne2.jpg" class="d-block h-50 img mx-auto">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="//placehold.it/800x400/88b48d" class="d-block h-50 img img-fluid">
+                                        <img src="./imgs/anne/anne3.jpg" class="d-block h-50 img mx-auto">
                                     </div>
                                 </div>
                                 <button class="carousel-control-prev" type="button"
@@ -91,20 +93,16 @@
                                 </button>
                             </div>
                         </div>
-                        <div class="col-12 col-md-6">
+                        <div class="col-12 col-md-6 my-2 my-md-5">
                             <div class="">
 
-                                <p>
-                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus, magni!
-                                    Dolorum mollitia quia excepturi est tempore ipsa debitis in natus quae molestiae,
-                                    fugiat
-                                    explicabo sunt vitae aut ratione adipisci dignissimos. Lorem ipsum dolor sit amet
-                                    consectetur adipisicing elit. Iusto aspernatur sed architecto enim molestiae aliquam
-                                    labore, est sunt ducimus rem minima voluptatibus facere, beatae quae ex. Veniam
-                                    recusandae sequi nihil? Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                                    Inventore soluta vel totam quisquam. Beatae, provident! Eum quae omnis nulla sint
-                                    possimus dolorem commodi! Dolor accusamus molestias magnam maxime excepturi
-                                    voluptatem!
+                                <p class="blurb">
+                                    Anna has been tattooing since she was young, starting in 2007. She holds honours
+                                    certified in medical aesthetics and understands skin inside out.
+                                    Her favourite things to do are illustrative realism animals, florals and portraits
+                                    and ornamental designs in large scale. Scroll down to view some examples of her
+                                    work. Her hobbies and past times include raising her twins, drawing, campfires,
+                                    fishing, camping, boating.
                                     <br>
                                 </p>
                                 <a class="link-success" href>View Gallery...</a>
@@ -114,45 +112,41 @@
                     <!-- last artist-->
                     <div class="row d-flex mt-5 pb-3">
                         <div class="col-12 col-md-6 order-md-last">
-                            <h3 class="text-light">Jeff</h3>
-                            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                            <h3 class="text-light text-center display-5">Jeff</h3>
+                            <div id="carouselExampleControls1" class="carousel slide" data-bs-ride="carousel">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img src="//placehold.it/800x400/88b48d" class="d-block h-50 img img-fluid">
+                                        <img src="./imgs/jeff/jeff1.jpg" class="d-block h-50 img img-fluid mx-auto">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="//placehold.it/800x400/88b48d" class="d-block h-50 img img-fluid">
+                                        <img src="./imgs/jeff/jeff2.jpg" class="d-block h-50 img img-fluid mx-auto">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="//placehold.it/800x400/88b48d" class="d-block h-50 img img-fluid">
+                                        <img src="./imgs/jeff/jeff3.jpg" class="d-block h-50 img img-fluid mx-auto">
                                     </div>
                                 </div>
                                 <button class="carousel-control-prev" type="button"
-                                    data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                                    data-bs-target="#carouselExampleControls1" data-bs-slide="prev">
                                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                     <span class="visually-hidden">Previous</span>
                                 </button>
                                 <button class="carousel-control-next" type="button"
-                                    data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                                    data-bs-target="#carouselExampleControls1" data-bs-slide="next">
                                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                     <span class="visually-hidden">Next</span>
                                 </button>
                             </div>
                         </div>
-                        <div class="col-12 col-md-6">
+                        <div class="col-12 col-md-6 my-2 my-md-5">
                             <div class="">
 
-                                <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus, magni!
-                                    Dolorum mollitia quia excepturi est tempore ipsa debitis in natus quae molestiae,
-                                    fugiat
-                                    explicabo sunt vitae aut ratione adipisci dignissimos. Lorem ipsum dolor sit amet
-                                    consectetur adipisicing elit. Iusto aspernatur sed architecto enim molestiae aliquam
-                                    labore, est sunt ducimus rem minima voluptatibus facere, beatae quae ex. Veniam
-                                    recusandae sequi nihil? Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                    Praesentium nulla, ipsum tempore, iusto cupiditate fugit illum minima non voluptas
-                                    cum,
-                                    cumque magni numquam laboriosam! Necessitatibus assumenda nemo ullam perspiciatis
-                                    dolore?
+                                <p class="blurb"> Jeff is originally an an illustrator of fine-line black ink illustrations, some of
+                                    his larger pieces would take upwards of two weeks to complete. He has been exploring
+                                    many different mediums such as gouache, acrylics, oil paints and large scale
+                                    abstract mixed media. He has been tattooing now for just over a year, training under
+                                    Anna and does illustrative blackwork and smooth soft shaded black and grey medium
+                                    sized pieces. Jeff’s hobbies include drawing, spending time with his kids and
+                                    family, concerts, video games and anime.
                                 </p>
                                 <a class="link-success">View Gallery...</a>
                             </div>
@@ -199,7 +193,8 @@
                             </div>
                         </div>
                         <!-- form -->
-                        <h3 class="phone-num text-center text-white link-light text-decoration-none contact-text mt-4"> Or contact
+                        <h3 class="phone-num text-center text-white link-light text-decoration-none contact-text mt-4">
+                            Or contact
                             us at: (123) 456-7890</h3>
                         <div class="container col-12 col-md-5 d-flex justify-content-center p-3">
                             <p class="bg-dark text-light p-3 rounded-1">
@@ -222,7 +217,7 @@
                     <div class="text-center">
                         <div class="container bg-dark">
                             <h2>See our FAQ for aftercare instructions and more</h2>
-                            <a><button class="btn btn-FAQ rounded-pill ps-4 pe-4 pt-2 pb-2">Visit</button></a>
+                            <a href="./FAQ.html"><button class="btn btn-FAQ rounded-pill ps-4 pe-4 pt-2 pb-2">Visit</button></a>
                         </div>
 
                     </div>
