modified photos & FAQ

--- a/gallery.html
+++ b/gallery.html
@@ -45,6 +45,7 @@
                     <li><a href="./index.html#artists" class="nav-link px-2 link-light">Artists</a></li>
                     <li><a href="./index.html#contact" class="nav-link px-2 link-light">Contact</a></li>
                     <li><a href="./FAQ.html" class="nav-link px-2 link-light">FAQs & Aftercare</a></li>
+                    <li><a href="./our-story.html" class="nav-link px-2 link-light">Our Story</a></li>
                 </ul>
             </header>
         </section>
@@ -78,7 +79,7 @@
         </section>
         <div class="header-container bg-dark">
             <div class="container">
-                <div class="row content-row" id='contentRow'data-masonry='{"percentPosition": true },  "itemSelector": ".col" }'>
+                <div class="row content-row" id='contentRow'data-masonry='{"percentPosition": true },  {"itemSelector": ".col" }'>
                     <div id="contentContainer">
 
                     </div>
