--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     <li><a href="#artists" class="nav-link px-2 link-light">Artists</a></li>
                     <li><a href="#contact" class="nav-link px-2 link-light">Contact</a></li>
                     <li><a href="./FAQ.html" class="nav-link px-2 link-light">FAQs & Aftercare</a></li>
+                    <li><a href="./our-story.html" class="nav-link px-2 link-light">Our Story</a></li>
                 </ul>
             </header>
         </section>
@@ -75,7 +76,7 @@
                                         <img src="./imgs/anne/anne1.jpg" class="d-block h-50 img mx-auto">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="./imgs/anne/anne2.jpg" class="d-block h-50 img mx-auto">
+                                        <img src="./imgs/anne/anne2.png" class="d-block h-50 img mx-auto">
                                     </div>
                                     <div class="carousel-item">
                                         <img src="./imgs/anne/anne3.jpg" class="d-block h-50 img mx-auto">
@@ -116,13 +117,13 @@
                             <div id="carouselExampleControls1" class="carousel slide" data-bs-ride="carousel">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img src="./imgs/jeff/jeff1.jpg" class="d-block h-50 img img-fluid mx-auto">
+                                        <img src="./imgs/jeff/jeff1.png" class="d-block h-50 img img-fluid mx-auto">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="./imgs/jeff/jeff2.jpg" class="d-block h-50 img img-fluid mx-auto">
+                                        <img src="./imgs/jeff/jeff2.png" class="d-block h-50 img img-fluid mx-auto">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="./imgs/jeff/jeff3.jpg" class="d-block h-50 img img-fluid mx-auto">
+                                        <img src="./imgs/jeff/jeff3.png" class="d-block h-50 img img-fluid mx-auto">
                                     </div>
                                 </div>
                                 <button class="carousel-control-prev" type="button"
