changes to formatting

--- a/gallery.html
+++ b/gallery.html
@@ -25,29 +25,50 @@
     <meta name="theme-color" content="#fafafa">
     <script src="https://kit.fontawesome.com/9de7b5c7f4.js" crossorigin="anonymous"></script>
     <!-- JQ -->
-
+    <script
+    src="https://code.jquery.com/jquery-3.6.4.slim.min.js"
+    integrity="sha256-a2yjHM4jnF9f54xUQakjZGaqYs/V1CYvWpoqZzC2/Bw="
+    crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div class="wrapper">
         <!-- Content start -->
         <!-- Header -->
-        <section class="header-container bg-dark">
-            <header
-                class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 border-bottom">
-                <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+         <section class="header-container bg-dark">
+            <nav class="navbar navbar-expand-md navbar-dark bg-dark text-center">
+                <div class="container-fluid text-center">
                     <img class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"
                         src="./imgs/WPTI_Icon_White.png"></img>
-                </a>
-                <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0 pe-3">
-                    <li><a href="./index.html" class="nav-link px-2 link-light">Home</a></li>
-                    <li><a href="./gallery.html" class="nav-link px-2 link-secondary">Galleries</a></li>
-                    <li><a href="./index.html#artists" class="nav-link px-2 link-light">Artists</a></li>
-                    <li><a href="./index.html#contact" class="nav-link px-2 link-light">Contact</a></li>
-                    <li><a href="./FAQ.html" class="nav-link px-2 link-light">FAQs & Aftercare</a></li>
-                    <li><a href="./our-story.html" class="nav-link px-2 link-light">Our Story</a></li>
-                </ul>
-            </header>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon "></span>
+                    </button>
+                    <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-center ">
+                            <li class="nav-item">
+                                <a href="./index.html" class="nav-link px-2 link-light">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="./gallery.html" class="nav-link px-2 link-light">Galleries</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="./index.html#artists" class="nav-link px-2 link-light">Artists</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="./index.html#contact" class="nav-link px-2 link-light">Contact</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="./FAQ.html" class="nav-link px-2 link-light">FAQ & Aftercare</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="./our-story.html" class="nav-link px-2 link-light">Our Story</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
         </section>
         <section id='gallery' class="gallery-container bg-dark">
             <div class="header-container bg-dark border-bottom">
@@ -86,38 +107,43 @@
                 </div>
             </div>
         </div>
-        <!-- Footer -->
-        <section class="footer-container bg-dark ">
-            <div class="container">
-                <footer class="py-3 my-4 text-light">
-                    <div>
-                        <a href="#gallery" class="text-success text-decoration-none text-center text">
-                            <p class="text-success text-decoration-none text-center text">Back to Top</p>
-                        </a>
-                    </div>
-                    <ul class="nav justify-content-center border-bottom pb-3 mb-3 text-light">
-                        <a class="nav-link text-light active" aria-current="page" href="./index.html">Home</a>
-                        <a class="nav-link text-light " aria-current="page" href="./gallery.html">Galleries</a>
-                        <a class="nav-link text-light " aria-current="page" href="./index.html">Artists</a>
-                        <a class="nav-link text-light " aria-current="page" href="./index.html">Contact</a>
-                        <a class="nav-link text-light " aria-current="page" href="./FAQ.html">FAQ & Aftercare</a>
-                    </ul>
-                    <div class="container-md">
-                        <div class="row">
-                            <div class="pt-3 pb-3 col text-center">
-                                <i class="fa-2xl p-2 fa-brands fa-facebook"></i>
-                                <i class="fa-2xl p-2 fa-brands fa-instagram"></i>
-                                <i class="fa-2xl p-2 fa-brands fa-tiktok"></i>
-                            </div>
+    </section>
+    <!-- Footer -->
+    <section class="footer-container bg-dark ">
+        <div class="container">
+            <footer class="py-3 my-4 text-light">
+                <div>
+                    <a href="#gallery" class="text-success text-decoration-none text-center text">
+                        <p class="text-success text-decoration-none text-center text">Back to Top</p>
+                    </a>
+                </div>
+
+                    <ul class="d-flex flex-wrap justify-content-center me-auto mb-2 mb-lg-0 border-top pt-4 ps-0">
+                        <a href="./index.html" class=" px-2 link-light">Home</a>
+                        <a href="./gallery.html" class=" px-2 link-light">Galleries</a>
+                        <a href="./index.html#artists" class="px-2 link-light">Artists</a>
+                        <a href="./index.html#contact" class="px-2 link-light">Contact</a>
+                        <a href="./FAQ.html" class=" px-2 link-light">FAQ & Aftercare</a>
+                        <a href="./our-story.html" class="px-2 link-light">Our Story</a>
+                </ul>
+
+                <div class="container-md">
+                    <div class="row">
+                        <div class="pt-3 pb-3 col text-center">
+                            <i class="fa-2xl p-2 fa-brands fa-instagram"></i>
                         </div>
                     </div>
-                    <p class="text-center text-light">© 2023 White Pine Tattoo, Inc</p>
-                </footer>
-            </div>
-        </section>
+                </div>
+                <p class="text-center text-light">© 2023 White Pine Tattoo, Inc</p>
+            </footer>
+        </div>
+    </section>
     </div>
-    <script src="https://code.jquery.com/jquery-3.6.3.slim.min.js" integrity="sha256-ZwqZIVdD3iXNyGHbSYdsmWP//UBokj2FHAxKuSBKDSo=" crossorigin="anonymous" ></script>
-    <script src="app.js?v=1.0"async defer ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
+    <script src="./app.js"  async defer></script> 
+    
 </body>
 
 </html>
