--- a/FAQ.html
+++ b/FAQ.html
@@ -288,35 +288,37 @@
             </div>
         </div>
     </section>
-    <!-- Footer -->
-    <section class="footer-container bg-dark ">
-        <div class="container">
-            <footer class="py-3 my-4 text-light">
-                <div>
-                    <a class="nav-link text-light " aria-current="page" href="#faq">
-                        <p class="text-success text-decoration-none text-center text">Back to Top</p>
-                    </a>
-                </div>
-                <ul class="nav justify-content-center border-bottom pb-3 mb-3 text-light">
-                    <a class="nav-link text-light active" aria-current="page" href="./index.html">Home</a>
-                    <a class="nav-link text-light " aria-current="page" href="./gallery.html">Galleries</a>
-                    <a class="nav-link text-light " aria-current="page" href="./index.html">Artists</a>
-                    <a class="nav-link text-light " aria-current="page" href="./index.html">Contact</a>
-                    <a class="nav-link text-light " aria-current="page" href="./FAQ.html">FAQ & Aftercare</a>
-                </ul>
-                <div class="container-md">
-                    <div class="row">
-                        <div class="pt-3 pb-3 col text-center">
-                            <i class="fa-2xl p-2 fa-brands fa-facebook"></i>
-                            <i class="fa-2xl p-2 fa-brands fa-instagram"></i>
-                            <i class="fa-2xl p-2 fa-brands fa-tiktok"></i>
-                        </div>
+</section>
+<!-- Footer -->
+<section class="footer-container bg-dark ">
+    <div class="container">
+        <footer class="py-3 my-4 text-light">
+            <div>
+                <a href="#faq" class="text-success text-decoration-none text-center text">
+                    <p class="text-success text-decoration-none text-center text">Back to Top</p>
+                </a>
+            </div>
+
+                <ul class="d-flex flex-wrap justify-content-center me-auto mb-2 mb-lg-0 border-top pt-4 ps-0">
+                    <a href="./index.html" class=" px-2 link-light">Home</a>
+                    <a href="./gallery.html" class=" px-2 link-light">Galleries</a>
+                    <a href="./index.html#artists" class="px-2 link-light">Artists</a>
+                    <a href="./index.html#contact" class="px-2 link-light">Contact</a>
+                    <a href="./FAQ.html" class=" px-2 link-light">FAQ & Aftercare</a>
+                    <a href="./our-story.html" class="px-2 link-light">Our Story</a>
+            </ul>
+
+            <div class="container-md">
+                <div class="row">
+                    <div class="pt-3 pb-3 col text-center">
+                        <i class="fa-2xl p-2 fa-brands fa-instagram"></i>
                     </div>
                 </div>
-                <p class="text-center text-light">© 2023 White Pine Tattoo, Inc</p>
-            </footer>
-        </div>
-    </section>
+            </div>
+            <p class="text-center text-light">© 2023 White Pine Tattoo, Inc</p>
+        </footer>
+    </div>
+</section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
