--- a/our-story.html
+++ b/our-story.html
@@ -38,7 +38,7 @@
             </ul>
         </header>
     </section>
-    <section id='gallery' class="gallery-container bg-dark">
+    <section id='story' class="gallery-container bg-dark">
         <div class="header-container bg-dark border-bottom">
             <div class="">
                 <div class="row">
@@ -95,27 +95,29 @@
             </div>
         </div>
     </section>
+    </section>
+    <!-- Footer -->
     <section class="footer-container bg-dark ">
         <div class="container">
             <footer class="py-3 my-4 text-light">
                 <div>
-                    <a href="#gallery" class="text-success text-decoration-none text-center text">
+                    <a href="#story" class="text-success text-decoration-none text-center text">
                         <p class="text-success text-decoration-none text-center text">Back to Top</p>
                     </a>
                 </div>
-                <ul class="nav justify-content-center border-bottom pb-3 mb-3 text-light">
-                    <a class="nav-link text-light active" aria-current="page" href="./index.html">Home</a>
-                    <a class="nav-link text-light " aria-current="page" href="./gallery.html">Galleries</a>
-                    <a class="nav-link text-light " aria-current="page" href="./index.html">Artists</a>
-                    <a class="nav-link text-light " aria-current="page" href="./index.html">Contact</a>
-                    <a class="nav-link text-light " aria-current="page" href="./FAQ.html">FAQ & Aftercare</a>
+
+                <ul class="d-flex flex-wrap justify-content-center me-auto mb-2 mb-lg-0 border-top pt-4 ps-0">
+                    <a href="./index.html" class=" px-2 link-light">Home</a>
+                    <a href="./gallery.html" class=" px-2 link-light">Galleries</a>
+                    <a href="./index.html#artists" class="px-2 link-light">Artists</a>
+                    <a href="./index.html#contact" class="px-2 link-light">Contact</a>
+                    <a href="./FAQ.html" class=" px-2 link-light">FAQ & Aftercare</a>
+                    <a href="./our-story.html" class="px-2 link-light">Our Story</a>
                 </ul>
                 <div class="container-md">
                     <div class="row">
                         <div class="pt-3 pb-3 col text-center">
-                            <i class="fa-2xl p-2 fa-brands fa-facebook"></i>
                             <i class="fa-2xl p-2 fa-brands fa-instagram"></i>
-                            <i class="fa-2xl p-2 fa-brands fa-tiktok"></i>
                         </div>
                     </div>
                 </div>
