--- a/gallery.html
+++ b/gallery.html
@@ -1,34 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="utf-8">
     <title>White Pine Tattoo | Gallery </title> <!-- TODO: update page title -->
-    <meta name="description" content=""> <!-- TODO: update meta description -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:title" content="Home - Page"> <!-- TODO: update OG Title -->
-    <meta property="og:url" content=""> <!-- TODO: update OG URL -->
-    <meta property="og:image" content="/path/to/image"> <!-- TODO: update OG Image -->
-    <meta property="og:type" content="">
-    <link rel="apple-touch-icon" href="icon.png">
-    <link rel="manifest" href="site.webmanifest"> <!-- TODO: Update web app manifest file -->
-    <link rel="icon" href="/favicon.ico"> <!-- TODO: Add favicon.ico file to project -->
     <!-- Bootstrap CDN-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- Masonry -->
-    <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js"
-        integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous"
-        defer></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="./style.css">
-    <meta name="theme-color" content="#fafafa">
     <script src="https://kit.fontawesome.com/9de7b5c7f4.js" crossorigin="anonymous"></script>
     <!-- JQ -->
     <script
     src="https://code.jquery.com/jquery-3.6.4.slim.min.js"
     integrity="sha256-a2yjHM4jnF9f54xUQakjZGaqYs/V1CYvWpoqZzC2/Bw="
     crossorigin="anonymous"></script>
+
 </head>
 
 <body>
@@ -100,42 +86,12 @@
         </section>
         <div class="header-container bg-dark">
             <div class="container">
-                <div class="row content-row" id='contentRow'data-masonry='{"percentPosition": true },  {"itemSelector": ".col" }'>
+                <div class="row content-row" id='contentRow'>
                     <div id="contentContainer">
 
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
-    <!-- Footer -->
-    <section class="footer-container bg-dark ">
-        <div class="container">
-            <footer class="py-3 my-4 text-light">
-                <div>
-                    <a href="#gallery" class="text-success text-decoration-none text-center text">
-                        <p class="text-success text-decoration-none text-center text">Back to Top</p>
-                    </a>
-                </div>
-
-                    <ul class="d-flex flex-wrap justify-content-center me-auto mb-2 mb-lg-0 border-top pt-4 ps-0">
-                        <a href="./index.html" class=" px-2 link-light">Home</a>
-                        <a href="./gallery.html" class=" px-2 link-light">Galleries</a>
-                        <a href="./index.html#artists" class="px-2 link-light">Artists</a>
-                        <a href="./index.html#contact" class="px-2 link-light">Contact</a>
-                        <a href="./FAQ.html" class=" px-2 link-light">FAQ & Aftercare</a>
-                        <a href="./our-story.html" class="px-2 link-light">Our Story</a>
-                </ul>
-
-                <div class="container-md">
-                    <div class="row">
-                        <div class="pt-3 pb-3 col text-center">
-                            <i class="fa-2xl p-2 fa-brands fa-instagram"></i>
-                        </div>
-                    </div>
-                </div>
-                <p class="text-center text-light">© 2023 White Pine Tattoo, Inc</p>
-            </footer>
         </div>
     </section>
     </div>
